code Changes navbar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Educational purpose</title>
 </head>
-<body class="border-2 m-0 p-0 border-red-400">
-    <nav class="flex bg-[#2c2c32] lg:px-[10%] justify-between items-center text-white w-[100vw] sticky top-0">
+<body class="m-auto p-0">
+    <nav class="flex bg-[#2c2c32] lg:px-[10%] justify-between items-center text-white w-full sticky top-0">
         <ul class="flex flex-wrap gap-[24px] items-center">
             <!-- #25252b -->
                 <div class="flex flex-grow cursor-pointer">
